kubernetes/flight-check-in-flask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-flask
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: HOSTNAME-WITHHELD
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flight-flask
            port:
              number: 8080
